test/expected/explain_etstf_v.out
explain extern static void f()
                           ^
28: error: "extern static" is illegal for function
